--- a/index.html
+++ b/index.html
@@ -11,13 +11,24 @@
 <body>
     <header>
         <div class="main">
+            <div class="logo">
+                <img src="media/logo.png">
+            </div>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Services</a></li>
+                <li><a href="#">Events</a></li>
                 <li><a href="#">Gallery</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
+        </div>
+        <div class="title">
+            <h1>Tierarztpraxis DeArte Medendi</h1>
+        </div>
+
+        <div class="button">
+            <a href="#" class="btn">Treten Sie ein!</a>
+
         </div>
     </header>
 </body>
