--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="main">
             <div class="logo">
-                <img src="media/logo.png">
+                <img src="media/logo.png" alt="logo">
             </div>
             <ul>
                 <li><a href="#">Home</a></li>
