--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             </ul>
         </div>
         <div class="title">
-            <h1>Tierarztpraxis DeArte Medendi</h1>
+            <h2>Tierarztpraxis</h2>
+            <h1>DeArte Medendi</h1>
         </div>
 
         <div class="button">
