--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 </head>
 <body>
     <header>
-        <div class="main">
+        <div class="nav-wrapper">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="src/events.html">Events</a></li>
+                <li><a href="src/about.html">About</a></li>
+                <li><a href="src/contact.html">Contact</a></li>
+            </ul>
+
             <div class="logo">
                 <img src="media/logo.png" alt="logo">
             </div>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Events</a></li>
-                <li><a href="#">Gallery</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
         </div>
         <div class="title">
             <h2>Tierarztpraxis</h2>
@@ -26,7 +26,7 @@
         </div>
 
         <div class="button">
-            <a href="#" class="btn">Treten Sie ein!</a>
+            <a href="src/praxis.html" class="btn">Treten Sie ein!</a>
 
         </div>
     </header>
