--- a/src/about.html
+++ b/src/about.html
@@ -3,22 +3,28 @@
     <head>
         <meta charset="UTF-8" />
         <title>Infos zur Praxis</title>
-        <link rel="stylesheet" href="../mystyle.css">
+        <link rel="stylesheet" href="about.css">
     </head>
 
     <body>
-        <div class="nav-wrapper">
-            <div class="logo">
+        <header>
+            <div class="nav-wrapper">
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="events.html">Events</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+                <div class="logo">
                 <img src="../media/logo.png" alt="logo">
+                </div>
             </div>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="events.html">Events</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
+        </header>
+        <div class="about">
+            <div class="text-center">
+                <h1>Coming soon!</h1>
+            </div>
         </div>
-        <h1>Coming soon!</h1>
     </body>
 
 </html>
