--- a/src/contact.html
+++ b/src/contact.html
@@ -20,11 +20,8 @@
         </div>
     </div>
 </header>
-<div class="about">
-    <div class="text-center">
-        <h1>Coming soon!</h1>
-    </div>
-</div>
+<div class="anfahrt"><h1>Coming soon!</h1></div>
+
 </body>
 
 </html>
