--- a/src/about.html
+++ b/src/about.html
@@ -21,7 +21,7 @@
             </div>
         </header>
                 <div class="anfahrt">
-                    <h1 id="anfahrt">Anfahrtsplan:</h1>
+                    <h1 id="strangeId">Anfahrtsplan:</h1>
                     <a href="https://www.google.at/maps/place/Dr.+Werner+S%C3%BCkar
                     /@47.0061944,15.5063788,15z/data=!4m5!3m4!1s0x476fb37d2e667e31:
                     0xa4ddb2d68cf3aeb7!8m2!3d47.006424!4d15.5034989" target="_blank">
