--- a/src/contact.html
+++ b/src/contact.html
@@ -20,7 +20,18 @@
         </div>
     </div>
 </header>
-<div class="anfahrt"><h1>Coming soon!</h1></div>
+<div class="anfahrt"><h1>Coming soon!</h1>
+    <p>
+    <ol>
+    <li>List item one</li>
+    <li>List item two with subitem:</li>
+        <ol>
+            <li>subitem</li>
+            <li>subitem2</li>
+        </ol>
+        <li>final list item</li>
+    </ol>
+</div>
 
 </body>
 
