--- a/src/events.html
+++ b/src/events.html
@@ -22,6 +22,7 @@
 </header>
 <div class="anfahrt">
         <h1>Coming soon!</h1>
+    <iframe width="1903" height="768" src="https://www.youtube.com/embed/cPuQtxI-2X8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 </body>
 
