--- a/src/praxis.html
+++ b/src/praxis.html
@@ -20,10 +20,8 @@
         </div>
     </div>
 </header>
-<div class="about">
-    <div class="text-center">
+<div class="anfahrt">
         <h1>Coming soon!</h1>
-    </div>
 </div>
 </body>
 
